# src/main/java/com/api/rober/Controllers/UsRolController.java
@@ -1,13 +1,14 @@
 package com.api.rober.Controllers;
 
 import com.api.rober.Controllers.DTO.UsRolDTO;
+import com.api.rober.Entity.UsRol;
 import com.api.rober.Services.IUsRolService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 
 @RestController
@@ -17,7 +18,7 @@ public class UsRolController {
     @Autowired
     private IUsRolService usRolService;
 
-    // me refiero al usuario mas el rol de pago
+    // me refiero al usuario mas, el rol de pago
     @GetMapping(value = "/Todo")
     public ResponseEntity<?> findAll() {
         List<UsRolDTO> usRolList = usRolService.findAll()
@@ -34,4 +35,15 @@ public class UsRolController {
      * al guardar para q haya congruensia de datos toaca la parte de empleados aca
      * y lo mismo con los roles
      */
+
+    @PostMapping("Todo")
+    public ResponseEntity<?> save(@RequestBody UsRolDTO usRolDTO) throws URISyntaxException  {
+
+        UsRol usRol = UsRol.builder()
+                .userRol(usRolDTO.getUserRol())
+                .rol(usRolDTO.getRol())
+                .build();
+        usRolService.save(usRol);
+        return ResponseEntity.created(new URI("/api/Todo")).build();
+    }
 }
